# two_robots

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  package.xml
RobotA/: CMakeLists.txt
RobotA/include/: RobotA.h
RobotA/src/: RobotA.cpp
RobotB/: CMakeLists.txt
RobotB/include/: RobotB.h
RobotB/src/: RobotB.cpp
